--- a/src/app/components/aprender/aprender.component.html
+++ b/src/app/components/aprender/aprender.component.html
@@ -9,7 +9,7 @@
       <!-- Feature 1 -->
       <div class="card-feature" appScrollReveal [parallaxStrength]=30 [elementWeight]="'MEDIUM'">
         <div class="card-feature-icone">
-          <img src="/assets/icons/icon-profile-pencil.png" alt="Preencher o perfil" width="48" height="36" class="pointer-events-none object-contain" appScrollReveal [parallaxStrength]=20 [elementWeight]="'LIGHT'" />
+          <img src="assets/icons/icon-profile-pencil.png" alt="Preencher o perfil" width="48" height="36" class="pointer-events-none object-contain" appScrollReveal [parallaxStrength]=20 [elementWeight]="'LIGHT'" />
         </div>
         <h3 class="card-feature-titulo" appScrollReveal [parallaxStrength]=20 [elementWeight]="'MEDIUM'">
           Preencher o perfil
@@ -21,7 +21,7 @@
       <!-- Feature 2 -->
       <div class="card-feature" appScrollReveal [parallaxStrength]=30 [elementWeight]="'MEDIUM'">
         <div class="card-feature-icone">
-          <img src="/assets/icons/icon-megaphone.png" alt="Ser ativo na plataforma" width="48" height="36" class="pointer-events-none object-contain" appScrollReveal [parallaxStrength]=20 [elementWeight]="'LIGHT'" />
+          <img src="assets/icons/icon-megaphone.png" alt="Ser ativo na plataforma" width="48" height="36" class="pointer-events-none object-contain" appScrollReveal [parallaxStrength]=20 [elementWeight]="'LIGHT'" />
         </div>
         <h3 class="card-feature-titulo" appScrollReveal [parallaxStrength]=20 [elementWeight]="'MEDIUM'">
           Ser ativo na plataforma
@@ -33,7 +33,7 @@
       <!-- Feature 3 -->
       <div class="card-feature" appScrollReveal [parallaxStrength]=30 [elementWeight]="'MEDIUM'">
         <div class="card-feature-icone">
-          <img src="/assets/icons/icon-curriculum.png" alt="Ter um currículo atrativo" width="48" height="36" class="pointer-events-none object-contain" appScrollReveal [parallaxStrength]=20 [elementWeight]="'LIGHT'" />
+          <img src="assets/icons/icon-curriculum.png" alt="Ter um currículo atrativo" width="48" height="36" class="pointer-events-none object-contain" appScrollReveal [parallaxStrength]=20 [elementWeight]="'LIGHT'" />
         </div>
         <h3 class="card-feature-titulo" appScrollReveal [parallaxStrength]=20 [elementWeight]="'MEDIUM'">
           Ter um currículo atrativo
@@ -45,7 +45,7 @@
       <!-- Feature 4 -->
       <div class="card-feature" appScrollReveal [parallaxStrength]=30 [elementWeight]="'MEDIUM'">
         <div class="card-feature-icone">
-          <img src="/assets/icons/icon-apply.png" alt="Aplicar a vagas" width="48" height="36" class="pointer-events-none object-contain" appScrollReveal [parallaxStrength]=20 [elementWeight]="'LIGHT'" />
+          <img src="assets/icons/icon-apply.png" alt="Aplicar a vagas" width="48" height="36" class="pointer-events-none object-contain" appScrollReveal [parallaxStrength]=20 [elementWeight]="'LIGHT'" />
         </div>
         <h3 class="card-feature-titulo" appScrollReveal [parallaxStrength]=20 [elementWeight]="'MEDIUM'">
           Aplicar a vagas
